@@ -109,6 +109,7 @@ Verilator 5.043 devel
 * Fix input sampling of clocking block signals (#6788). [Pawel Kojma, Antmicro Ltd.]
 * Fix O(n*2) analysis in const-bit-op-tree (#6791). [Geza Lore]
 * Fix nested struct within parameter port list (#6818) (#6824). [Luca Colagrande]
+* Fix duplicate name error with interface initial blocks (#6804) (#6805). [Thomas Dybdahl Ahle]
 
 
 Verilator 5.042 2025-11-02
